--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -26,7 +26,7 @@
                     <div class="row">
                         <!-- page size -->
                         <div class="col-sm-4 d-flex align-items-end">
-                            <select class="custom-select custom-select-sm text-secondary bg-light" id="paginationPageSize" style="max-width: 33%">
+                            <select class="max-width-33 custom-select custom-select-sm text-secondary bg-light" id="paginationPageSize">
                                 <option th:each="ps : ${T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.PageSize).values()}"
                                         th:value="${ps.ordinal()}"
                                         th:text="${ps.size}"
@@ -50,7 +50,7 @@
                                 <small class="text-dark font-weight-lighter">Sort by</small>
                             </p>
                             <!-- admin options -->
-                            <select sec:authorize="hasRole('ADMIN')" class="custom-select custom-select-sm text-secondary bg-light" id="paginationSortCriteria" style="max-width: 70%">
+                            <select sec:authorize="hasRole('ADMIN')" class="max-width-70 custom-select custom-select-sm text-secondary bg-light" id="paginationSortCriteria">
                                 <option th:each="sc : ${T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.sort.BookSortCriteria).values()}"
                                         th:value="${sc.ordinal()}"
                                         th:text="${sc.text}"
@@ -58,7 +58,7 @@
                                 </option>
                             </select>
                             <!-- no-admin options -->
-                            <select sec:authorize="!hasRole('ADMIN')" class="custom-select custom-select-sm text-secondary bg-light" id="paginationSortCriteria" style="max-width: 70%">
+                            <select sec:authorize="!hasRole('ADMIN')" class="max-width-70 custom-select custom-select-sm text-secondary bg-light" id="paginationSortCriteria">
                                 <option th:each="sc : ${T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.sort.BookSortCriteria).values()}"
                                         th:value="${sc.ordinal()}"
                                         th:text="${sc.text}"
@@ -75,7 +75,7 @@
             <!-- main content -->
             <div class="row">
                 <!-- SEARCH CRITERIA  -->
-                <a style="display: none" id="trigger"></a>
+                <a class="display-none" id="trigger"></a>
                 <div class="col-sm-3 my-3">
                     <!-- search query -->
                     <div th:replace="fragments/components::backendRequestParamError"></div>
@@ -93,7 +93,7 @@
                         <button class="btn btn-outline-info btn-sm border-0 my-0">
                             <i class="fas fa-times"></i>
                         </button>
-                        <a class="close" data-dismiss="alert" style="display: none"></a>
+                        <a class="display-none close" data-dismiss="alert"></a>
                     </div>
                     <!-- category breadcrumb -->
                     <div class="mt-3 mb-1">
@@ -108,7 +108,7 @@
                     <button class="accordion" id="categoryAcc">Category</button>
                     <div class="panel mb-1">
                         <div class="my-3" th:each="cat : ${childrenCategories}">
-                            <a class="categoryLink text-secondary font-weight-light" style="text-decoration: none" th:href="@{/books?categoryId={categoryId}(categoryId=${cat.id})}" th:text="${cat.name.substring(0, T(java.lang.Math).min(cat.name.length(), __${@environment.getProperty('fm.front-end.books.filter.general-max-size')}__))}">Category Name</a>
+                            <a class="no-decoration categoryLink text-secondary font-weight-light" th:href="@{/books?categoryId={categoryId}(categoryId=${cat.id})}" th:text="${cat.name.substring(0, T(java.lang.Math).min(cat.name.length(), __${@environment.getProperty('fm.front-end.books.filter.general-max-size')}__))}">Category Name</a>
                         </div>
                     </div>
                     <!-- price criteria -->
@@ -177,7 +177,7 @@
                                 <div class="col-sm-6 bg-white">
                                     <!-- title -->
                                     <div class="mt-3">
-                                        <a class="text-info font-weight-bold" th:href="@{/book/{id}(id=${book.id})}" style="text-decoration: none">
+                                        <a class="no-decoration text-info font-weight-bold" th:href="@{/book/{id}(id=${book.id})}">
                                             <p th:unless="${book.title.isBlank()}">
                                                 <strong th:text="${book.title.substring(0, T(java.lang.Math).min(book.title.length(), __${@environment.getProperty('fm.front-end.books.title-max-size')}__))}"></strong>
                                             </p>
@@ -298,7 +298,7 @@
         <script th:src="@{/js/accordion.js}"></script>
         <script th:src="@{/js/searchCriteria.js}"></script>
         <!-- ajax add book to cart -->
-        <a th:href="@{/login}" id="loginLink" style="display: none"></a>
+        <a th:replace="fragments/components::login-link"></a>
         <script th:src="@{/js/ajaxAddBook.js}"></script>
         <!-- pagination functionality -->
         <a th:replace="fragments/components::paginationTrigger"></a>
