--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -12,11 +12,21 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css" integrity="sha384-ICB8i/maQ/5+tGLDUEcswB7Ch+OO9Oj8Z4Ov/Gs0gxqfTgLLkD3F43MhcEJ2x6/D" crossorigin="anonymous">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" integrity="sha384-44LpgvTLiHI85YeNp56Lm8JYmDtP6cbULv4cgD6eAszycw3kPPJ8fmEW4gwckzWF" crossorigin="anonymous">
         <link rel="stylesheet" th:href="@{/css/fmstyle.css}" type="text/css"/>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <script src="https://kit.fontawesome.com/9902891181.js" integrity="sha384-BMqrD/sYB325yWlZdfm3hmJIKdmd+hPoenqE0vWeVUWbrZZTt7J3KdcJT7vfMMu2" crossorigin="anonymous"></script>
-        <script src="https://js.stripe.com/v3/" integrity="sha384-x7JE0GrUkmUazJg6iTjYrjuGRcCjVxlk329jhulP7tdNdmzOG6SHjgMIFiB0rPNK" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+                integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
+                crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"
+                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+                crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+                integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+                crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/9902891181.js"
+                integrity="sha384-BMqrD/sYB325yWlZdfm3hmJIKdmd+hPoenqE0vWeVUWbrZZTt7J3KdcJT7vfMMu2"
+                crossorigin="anonymous"></script>
+        <script src="https://js.stripe.com/v3/"
+                integrity="sha384-HdnbDQxDvTgeh4pIa5B92LHkCJkbN/XJYhmwXZumFXMSIqVc8OgMM6YU8NjVmbzB"
+                crossorigin="anonymous"></script>
     </head>
 
     <body>
