got rid of inline style

--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -49,14 +49,14 @@
                             </div>
                         </div>
                     </form>
-                    <hr style="max-width: 50%; margin-top: 2rem; margin-bottom: 0.5rem; margin-left: 0"/>
+                    <hr class="hr-login"/>
                     <!-- new user link -->
                     <div class="mb-2">
-                        <span>New? Click <a class="text-info" th:href="@{/newUser}" style="text-decoration: none">here</a> to register.</span>
+                        <span>New? Click <a class="no-decoration text-info" th:href="@{/newUser}">here</a> to register.</span>
                     </div>
                     <!-- forgot password? link -->
                     <div class="small text-muted">
-                        <span>Forgot your password? Click <a class="text-info" th:href="@{/resetPassword}" style="text-decoration: none">here</a> to restore it.</span>
+                        <span>Forgot your password? Click <a class="no-decoration text-info" th:href="@{/resetPassword}">here</a> to restore it.</span>
                     </div>
                 </div>
                 <!-- right margin -->
