--- a/src/main/resources/static/css/fmstyle.css
+++ b/src/main/resources/static/css/fmstyle.css
@@ -217,9 +217,14 @@ body {
     border-left: 6px solid #17a2b8;
 }
 
-.logo-img {
+.img-32 {
     width: 32px;
     height: 32px;
+}
+
+.img-64 {
+    width: 64px;
+    height: 64px;
 }
 
 .display-none {
@@ -228,6 +233,10 @@ body {
 
 .display-block {
     display: block;
+}
+
+.display-inline {
+    display: inline;
 }
 
 .max-width-25 {
@@ -250,6 +259,13 @@ body {
 .hr-description {
     max-width: 50%;
     margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    margin-left: 0;
+}
+
+.hr-login {
+    max-width: 50%;
+    margin-top: 2rem;
     margin-bottom: 0.5rem;
     margin-left: 0;
 }
