--- a/src/main/resources/templates/images.html
+++ b/src/main/resources/templates/images.html
@@ -35,7 +35,7 @@
                             <!-- label -->
                             <p th:replace="fragments/components::paginationSortLabel"></p>
                             <!-- options -->
-                            <select class="custom-select custom-select-sm text-secondary bg-light" id="paginationSortCriteria" style="max-width: 70%">
+                            <select class="max-width-70 custom-select custom-select-sm text-secondary bg-light" id="paginationSortCriteria">
                                 <option th:each="sc : ${T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.sort.ImageSortCriteria).values()}"
                                         th:value="${sc.ordinal()}"
                                         th:text="${sc.text}"
@@ -58,7 +58,7 @@
                     <!-- upload image -->
                     <form class="needs-validation form-inline mb-2" novalidate th:action="@{/admin/newImage}" th:object="${imagesWrapper}" method="POST" enctype="multipart/form-data">
                         <div class="form-group">
-                            <input class="form-control form-control-sm bg-light px-5 " type="file" multiple th:field="*{images}" accept="image/*" required  /><!-- style="max-width: 50%"-->
+                            <input class="form-control form-control-sm bg-light px-5 " type="file" multiple th:field="*{images}" accept="image/*" required  />
                             <div class="invalid-feedback">Please select an image</div>
                         </div>
                         <div th:replace="fragments/components::backendSpecificObjectFieldErrors('images')"></div>
@@ -82,7 +82,7 @@
                         <tbody>
                             <tr th:each="mi : ${pageOfEntities}">
                                 <!-- image visualization -->
-                                <td><a th:href="@{/image/{id}(id=${mi.id})}"><img th:src="@{/image/{id}(id=${mi.id})}" style="width:64px;height:64px;"></a></td>
+                                <td><a th:href="@{/image/{id}(id=${mi.id})}"><img class="img-64" th:src="@{/image/{id}(id=${mi.id})}"></a></td>
                                 <!-- image name -->
                                 <td><span th:text="${mi.name}">name</span></td>
                                 <!-- is default -->
