--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -8,9 +8,15 @@
         <meta charset="UTF-8">
         <title th:text="${title}"></title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css" integrity="sha384-ICB8i/maQ/5+tGLDUEcswB7Ch+OO9Oj8Z4Ov/Gs0gxqfTgLLkD3F43MhcEJ2x6/D" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" integrity="sha384-44LpgvTLiHI85YeNp56Lm8JYmDtP6cbULv4cgD6eAszycw3kPPJ8fmEW4gwckzWF" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+              integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css"
+              integrity="sha384-ICB8i/maQ/5+tGLDUEcswB7Ch+OO9Oj8Z4Ov/Gs0gxqfTgLLkD3F43MhcEJ2x6/D"
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap"
+              integrity="sha384-VjEt+oh8FI3bBnvg3Iizj/e78szgh+xBvzoXsqJ9kSuXuQgSeYDUPtRCY8oGWbvt"
+              crossorigin="anonymous">
         <link rel="stylesheet" th:href="@{/css/fmstyle.css}" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
                 integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
@@ -25,7 +31,7 @@
                 integrity="sha384-BMqrD/sYB325yWlZdfm3hmJIKdmd+hPoenqE0vWeVUWbrZZTt7J3KdcJT7vfMMu2"
                 crossorigin="anonymous"></script>
         <script src="https://js.stripe.com/v3/"
-                integrity="sha384-nFcBIScFf6xsscc/KL7cJLiuU30f7xAkxZepyWL4XCMrltsCVEXDO5t3rKUcszfS"
+                integrity="sha384-98eRHyUnBc8DagspKnOYTKJnm1KMgsLl0H1d8c9m7ac/JC4w2QQQjRt0D2JKxNT1"
                 crossorigin="anonymous"></script>
     </head>
 
