--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
             <div class="row my-5 py-5">
                 <div class="col-sm-12">
                     <!-- title -->
-                    <h1 class="text-center">
+                    <h1 class="text-center" id="mainTitleH1">
                         <span class="text-dark" id="mainTitle" th:attrappend="tw-text=${(@environment.getProperty('fm.front-end.home.jum.title.text') ne null) ? @environment.getProperty('fm.front-end.home.jum.title.text') : ' '}, tw-speed=${(@environment.getProperty('fm.front-end.home.jum.title.speed') ne null) ? @environment.getProperty('fm.front-end.home.jum.title.speed') : 0}"></span>
                     </h1>
                     <h3 class="text-center font-weight-lighter">
