--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,11 +15,11 @@
             <div class="row my-5 py-5">
                 <div class="col-sm-12">
                     <!-- title -->
-                    <h1 class="text-center" id="mainTitleH1">
+                    <h1 class="text-center">
                         <span class="text-dark" id="mainTitle" th:attrappend="tw-text=${(@environment.getProperty('fm.front-end.home.jum.title.text') ne null) ? @environment.getProperty('fm.front-end.home.jum.title.text') : ' '}, tw-speed=${(@environment.getProperty('fm.front-end.home.jum.title.speed') ne null) ? @environment.getProperty('fm.front-end.home.jum.title.speed') : 0}"></span>
                     </h1>
                     <h3 class="text-center font-weight-lighter">
-                        <em class="text-secondary font-weight-lighter small" id="secondaryTitle" th:attrappend="tw-text=${(@environment.getProperty('fm.front-end.home.jum.subtitle.text') ne null) ? @environment.getProperty('fm.front-end.home.jum.subtitle.text') : ' '}, tw-speed=${(@environment.getProperty('fm.front-end.home.jum.subtitle.speed') ne null) ? @environment.getProperty('fm.front-end.home.jum.subtitle.speed') : 0}"></em>
+                        <em class="text-secondary font-weight-lighter" id="secondaryTitle" th:attrappend="tw-text=${(@environment.getProperty('fm.front-end.home.jum.subtitle.text') ne null) ? @environment.getProperty('fm.front-end.home.jum.subtitle.text') : ' '}, tw-speed=${(@environment.getProperty('fm.front-end.home.jum.subtitle.speed') ne null) ? @environment.getProperty('fm.front-end.home.jum.subtitle.speed') : 0}"></em>
                     </h3>
                     <!-- search query -->
                     <div class="row mt-n2">
