trying to make admin message bigger

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -43,9 +43,9 @@
                     </div>
                     <!-- admin message -->
                     <div class="text-center mt-2" sec:authorize="hasRole('ADMIN')">
-                        <h6><code class="text-info font-weight-lighter">
-                            <small>< a great power comes with a great responsibility /></small>
-                        </code></h6>
+                        <h5><code class="text-info font-weight-lighter">
+                            < a great power comes with a great responsibility />
+                        </code></h5>
                     </div>
                 </div>
             </div>
